--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.ProjectDeveloper"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity_Information"
+            android:exported="false" />
+        <activity
             android:name=".ui.Inscription"
             android:exported="false" />
         <activity
